docs/v8.0/packages_api/runtime/grafanabootconfig.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "GrafanaBootConfig"
keywords = ["grafana","documentation","sdk","@grafana/runtime"]
type = "docs"
disable_edit_link = true
+++

## GrafanaBootConfig class

<b>Signature</b>

```typescript
export declare class GrafanaBootConfig implements GrafanaConfig 
```
<b>Import</b>

```typescript
import { GrafanaBootConfig } from '@grafana/runtime';
```
<b>Constructors</b>

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [constructor(options)](#constructor-options) |  | Constructs a new instance of the <code>GrafanaBootConfig</code> class |

<b>Properties</b>

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [alertingEnabled](#alertingenabled-property) |  | <code>boolean</code> |  |
|  [alertingErrorOrTimeout](#alertingerrorortimeout-property) |  | <code>string</code> |  |
|  [alertingMinInterval](#alertingmininterval-property) |  | <code>number</code> |  |
|  [alertingNoDataOrNullValues](#alertingnodataornullvalues-property) |  | <code>string</code> |  |
|  [allowOrgCreate](#alloworgcreate-property) |  | <code>boolean</code> |  |
|  [appSubUrl](#appsuburl-property) |  | <code>string</code> |  |
|  [appUrl](#appurl-property) |  | <code>string</code> |  |
|  [authProxyEnabled](#authproxyenabled-property) |  | <code>boolean</code> |  |
|  [autoAssignOrg](#autoassignorg-property) |  | <code>boolean</code> |  |
|  [awsAllowedAuthProviders](#awsallowedauthproviders-property) |  | <code>string[]</code> |  |
|  [awsAssumeRoleEnabled](#awsassumeroleenabled-property) |  | <code>boolean</code> |  |
|  [azure](#azure-property) |  | <code>AzureSettings</code> |  |
|  [bootData](#bootdata-property) |  | <code>any</code> |  |
|  [buildInfo](#buildinfo-property) |  | <code>BuildInfo</code> |  |
|  [caching](#caching-property) |  | <code>{</code><br/><code>        enabled: boolean;</code><br/><code>    }</code> |  |
|  [customTheme](#customtheme-property) |  | <code>any</code> |  |
|  [datasources](#datasources-property) |  | <code>{</code><br/><code>        [str: string]: DataSourceInstanceSettings;</code><br/><code>    }</code> |  |
|  [dateFormats](#dateformats-property) |  | <code>SystemDateFormatSettings</code> |  |
|  [defaultDatasource](#defaultdatasource-property) |  | <code>string</code> |  |
|  [disableLoginForm](#disableloginform-property) |  | <code>boolean</code> |  |
|  [disableSanitizeHtml](#disablesanitizehtml-property) |  | <code>boolean</code> |  |
|  [disableUserSignUp](#disableusersignup-property) |  | <code>boolean</code> |  |
|  [editorsCanAdmin](#editorscanadmin-property) |  | <code>boolean</code> |  |
|  [exploreEnabled](#exploreenabled-property) |  | <code>boolean</code> |  |
|  [expressionsEnabled](#expressionsenabled-property) |  | <code>boolean</code> |  |
|  [externalUserMngInfo](#externalusermnginfo-property) |  | <code>string</code> |  |
|  [externalUserMngLinkName](#externalusermnglinkname-property) |  | <code>string</code> |  |
|  [externalUserMngLinkUrl](#externalusermnglinkurl-property) |  | <code>string</code> |  |
|  [featureToggles](#featuretoggles-property) |  | <code>FeatureToggles</code> |  |
|  [http2Enabled](#http2enabled-property) |  | <code>boolean</code> |  |
|  [ldapEnabled](#ldapenabled-property) |  | <code>boolean</code> |  |
|  [licenseInfo](#licenseinfo-property) |  | <code>LicenseInfo</code> |  |
|  [liveEnabled](#liveenabled-property) |  | <code>boolean</code> |  |
|  [loginError](#loginerror-property) |  | <code>any</code> |  |
|  [loginHint](#loginhint-property) |  | <code>any</code> |  |
|  [minRefreshInterval](#minrefreshinterval-property) |  | <code>string</code> |  |
|  [navTree](#navtree-property) |  | <code>any</code> |  |
|  [newPanelTitle](#newpaneltitle-property) |  | <code>string</code> |  |
|  [oauth](#oauth-property) |  | <code>any</code> |  |
|  [panels](#panels-property) |  | <code>{</code><br/><code>        [key: string]: PanelPluginMeta;</code><br/><code>    }</code> |  |
|  [passwordHint](#passwordhint-property) |  | <code>any</code> |  |
|  [pluginAdminEnabled](#pluginadminenabled-property) |  | <code>boolean</code> |  |
|  [pluginAdminExternalManageEnabled](#pluginadminexternalmanageenabled-property) |  | <code>boolean</code> |  |
|  [pluginCatalogURL](#plugincatalogurl-property) |  | <code>string</code> |  |
|  [pluginsToPreload](#pluginstopreload-property) |  | <code>string[]</code> |  |
|  [rendererAvailable](#rendereravailable-property) |  | <code>boolean</code> |  |
|  [rendererVersion](#rendererversion-property) |  | <code>string</code> |  |
|  [samlEnabled](#samlenabled-property) |  | <code>boolean</code> |  |
|  [sentry](#sentry-property) |  | <code>{</code><br/><code>        enabled: boolean;</code><br/><code>        dsn: string;</code><br/><code>        customEndpoint: string;</code><br/><code>        sampleRate: number;</code><br/><code>    }</code> |  |
|  [sigV4AuthEnabled](#sigv4authenabled-property) |  | <code>boolean</code> |  |
|  [theme](#theme-property) |  | <code>GrafanaTheme</code> |  |
|  [theme2](#theme2-property) |  | <code>GrafanaTheme2</code> |  |
|  [verifyEmailEnabled](#verifyemailenabled-property) |  | <code>boolean</code> |  |
|  [viewersCanEdit](#viewerscanedit-property) |  | <code>boolean</code> |  |
|  [windowTitlePrefix](#windowtitleprefix-property) |  | <code>string</code> |  |

### constructor(options)

Constructs a new instance of the `GrafanaBootConfig` class

<b>Signature</b>

```typescript
constructor(options: GrafanaBootConfig);
```
<b>Parameters</b>

|  Parameter | Type | Description |
|  --- | --- | --- |
|  options | <code>GrafanaBootConfig</code> |  |

### alertingEnabled property

<b>Signature</b>

```typescript
alertingEnabled: boolean;
```

### alertingErrorOrTimeout property

<b>Signature</b>

```typescript
alertingErrorOrTimeout: string;
```

### alertingMinInterval property

<b>Signature</b>

```typescript
alertingMinInterval: number;
```

### alertingNoDataOrNullValues property

<b>Signature</b>

```typescript
alertingNoDataOrNullValues: string;
```

### allowOrgCreate property

<b>Signature</b>

```typescript
allowOrgCreate: boolean;
```

### appSubUrl property

<b>Signature</b>

```typescript
appSubUrl: string;
```

### appUrl property

<b>Signature</b>

```typescript
appUrl: string;
```

### authProxyEnabled property

<b>Signature</b>

```typescript
authProxyEnabled: boolean;
```

### autoAssignOrg property

<b>Signature</b>

```typescript
autoAssignOrg: boolean;
```

### awsAllowedAuthProviders property

<b>Signature</b>

```typescript
awsAllowedAuthProviders: string[];
```

### awsAssumeRoleEnabled property

<b>Signature</b>

```typescript
awsAssumeRoleEnabled: boolean;
```

### azure property

<b>Signature</b>

```typescript
azure: AzureSettings;
```

### bootData property

<b>Signature</b>

```typescript
bootData: any;
```

### buildInfo property

<b>Signature</b>

```typescript
buildInfo: BuildInfo;
```

### caching property

<b>Signature</b>

```typescript
caching: {
        enabled: boolean;
    };
```

### customTheme property

<b>Signature</b>

```typescript
customTheme?: any;
```

### datasources property

<b>Signature</b>

```typescript
datasources: {
        [str: string]: DataSourceInstanceSettings;
    };
```

### dateFormats property

<b>Signature</b>

```typescript
dateFormats?: SystemDateFormatSettings;
```

### defaultDatasource property

<b>Signature</b>

```typescript
defaultDatasource: string;
```

### disableLoginForm property

<b>Signature</b>

```typescript
disableLoginForm: boolean;
```

### disableSanitizeHtml property

<b>Signature</b>

```typescript
disableSanitizeHtml: boolean;
```

### disableUserSignUp property

<b>Signature</b>

```typescript
disableUserSignUp: boolean;
```

### editorsCanAdmin property

<b>Signature</b>

```typescript
editorsCanAdmin: boolean;
```

### exploreEnabled property

<b>Signature</b>

```typescript
exploreEnabled: boolean;
```

### expressionsEnabled property

<b>Signature</b>

```typescript
expressionsEnabled: boolean;
```

### externalUserMngInfo property

<b>Signature</b>

```typescript
externalUserMngInfo: string;
```

### externalUserMngLinkName property

<b>Signature</b>

```typescript
externalUserMngLinkName: string;
```

### externalUserMngLinkUrl property

<b>Signature</b>

```typescript
externalUserMngLinkUrl: string;
```

### featureToggles property

<b>Signature</b>

```typescript
featureToggles: FeatureToggles;
```

### http2Enabled property

<b>Signature</b>

```typescript
http2Enabled: boolean;
```

### ldapEnabled property

<b>Signature</b>

```typescript
ldapEnabled: boolean;
```

### licenseInfo property

<b>Signature</b>

```typescript
licenseInfo: LicenseInfo;
```

### liveEnabled property

<b>Signature</b>

```typescript
liveEnabled: boolean;
```

### loginError property

<b>Signature</b>

```typescript
loginError: any;
```

### loginHint property

<b>Signature</b>

```typescript
loginHint: any;
```

### minRefreshInterval property

<b>Signature</b>

```typescript
minRefreshInterval: string;
```

### navTree property

<b>Signature</b>

```typescript
navTree: any;
```

### newPanelTitle property

<b>Signature</b>

```typescript
newPanelTitle: string;
```

### oauth property

<b>Signature</b>

```typescript
oauth: any;
```

### panels property

<b>Signature</b>

```typescript
panels: {
        [key: string]: PanelPluginMeta;
    };
```

### passwordHint property

<b>Signature</b>

```typescript
passwordHint: any;
```

### pluginAdminEnabled property

<b>Signature</b>

```typescript
pluginAdminEnabled: boolean;
```

### pluginAdminExternalManageEnabled property

<b>Signature</b>

```typescript
pluginAdminExternalManageEnabled: boolean;
```

### pluginCatalogURL property

<b>Signature</b>

```typescript
pluginCatalogURL: string;
```

### pluginsToPreload property

<b>Signature</b>

```typescript
pluginsToPreload: string[];
```

### rendererAvailable property

<b>Signature</b>

```typescript
rendererAvailable: boolean;
```

### rendererVersion property

<b>Signature</b>

```typescript
rendererVersion: string;
```

### samlEnabled property

<b>Signature</b>

```typescript
samlEnabled: boolean;
```

### sentry property

<b>Signature</b>

```typescript
sentry: {
        enabled: boolean;
        dsn: string;
        customEndpoint: string;
        sampleRate: number;
    };
```

### sigV4AuthEnabled property

<b>Signature</b>

```typescript
sigV4AuthEnabled: boolean;
```

### theme property

<b>Signature</b>

```typescript
theme: GrafanaTheme;
```

### theme2 property

<b>Signature</b>

```typescript
theme2: GrafanaTheme2;
```

### verifyEmailEnabled property

<b>Signature</b>

```typescript
verifyEmailEnabled: boolean;
```

### viewersCanEdit property

<b>Signature</b>

```typescript
viewersCanEdit: boolean;
```

### windowTitlePrefix property

<b>Signature</b>

```typescript
windowTitlePrefix: string;
```
